--- a/FFXII-Job-Fiesta/src/main/resources/templates/home.html
+++ b/FFXII-Job-Fiesta/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
 		</div>
 		
 		<div th:if = "${lists.size(startedRuns) > 0}">
-			<h1 id = "startedRunHeader">Here are the last ten runs that were recently started.</h1>
+			<h1 id = "startedRunsHeader">Here are the last ten runs that were recently started.</h1>
 			<table id = "startedRuns">
 				<thead>
 					<tr>
@@ -42,12 +42,73 @@
 				</thead>
 				<tbody>
 					<tr th:each = "ongoingRuns : ${startedRun}">
-						<td th:text = "${ongoingRuns.
+						<td th:text = "${ongoingRuns.username}></td>
+						<td th:text = ${ongoingRuns.runType}></td>
+						<td th:text = ${ongoingRuns.vaanJobOne}></td>
+						<td th:text = ${ongoingRuns.vaanJobTwo}></td>
+						<td th:text = ${ongoingRuns.franJobOne}></td>
+						<td th:text = ${ongoingRuns.franJobTwo}></td>
+						<td th:text = ${ongoingRuns.balthierJobone}></td>
+						<td th:text = ${ongoingRuns.balthierJobTwo}></td>
+						<td th:text = ${ongoingRuns.baschJobOne}></td>
+						<td th:text = ${ongoingRuns.baschJobTwo}></td>
+						<td th:text = ${ongoingRuns.asheJobOne}></td>
+						<td th:text = ${ongoingRuns.asheJobTwo}></td>
+						<td th:text = ${ongoingRuns.peneloJobOne}></td>
+						<td th:text = ${ongoingRuns.peneloJobTwo}></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 		
+		<div th:if = "${lists.size(finishedRuns) > 0}">
+			<h1 id = "finishedRunsHeader">Here are the last ten runs that were recently started.</h1>
+			<table id = "finishedRuns">
+				<thead>
+					<tr>
+						<td>User</td>
+						<td>Run Type</td>
+						<td>First Job: Vaan</td>
+						<td>Second Job: Vaan</td>
+						<td>First Job: Fran</td>
+						<td>Second Job: Fran</td>
+						<td>First Job: Balthier</td>
+						<td>Second Job: Balthier</td>
+						<td>First Job: Basch</td>
+						<td>Second Job: Basch</td>
+						<td>First Job: Ashe</td>
+						<td>Second Job: Ashe</td>
+						<td>First Job: Penelo</td>
+						<td>Second Job: Penelo</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each = "doneRuns : ${finishedRuns}">
+						<td th:text = "${doneRuns.username}></td>
+						<td th:text = ${doneRuns.runType}></td>
+						<td th:text = ${doneRuns.vaanJobOne}></td>
+						<td th:text = ${doneRuns.vaanJobTwo}></td>
+						<td th:text = ${doneRuns.franJobOne}></td>
+						<td th:text = ${doneRuns.franJobTwo}></td>
+						<td th:text = ${doneRuns.balthierJobone}></td>
+						<td th:text = ${doneRuns.balthierJobTwo}></td>
+						<td th:text = ${doneRuns.baschJobOne}></td>
+						<td th:text = ${doneRuns.baschJobTwo}></td>
+						<td th:text = ${doneRuns.asheJobOne}></td>
+						<td th:text = ${doneRuns.asheJobTwo}></td>
+						<td th:text = ${doneRuns.peneloJobOne}></td>
+						<td th:text = ${doneRuns.peneloJobTwo}></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		
+		<div sec:authorize = "hasAnyRole('ROLE_ADMIN', 'ROLE_USER')">
+			<form th:action = @{/logout}" method = "post">
+				<input type = "submit" value = "Sign out" />
+				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			</form>
+		</div>
 	</body>
 	
 </html>
